kube-prometheus-stack/kube-prometheus-stack/templates/prometheus/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: prometheus-ingress
  namespace: accuknox-dev-monitoring
  labels:
    app: prometheus
  annotations:
     cert-manager.io/cluster-issuer: letsencrypt-prod
     kubernetes.io/ingress.class: nginx
     kubernetes.io/tls-acme: "true"
     nginx.ingress.kubernetes.io/auth-type: basic
     nginx.ingress.kubernetes.io/auth-secret: prometheus-auth
     nginx.ingress.kubernetes.io/auth-realm: "Authentication Required - ok"
spec:
 rules:
 - host: prometheus-dev.accuknox.com
   http:
    paths:
    - path: /
      backend:
        serviceName: prometheusmetrics-kube-pro-prometheus
        servicePort: 9090
    
 tls:
  - hosts:
    - prometheus-dev.accuknox.com
    secretName: prometheus-cert
